first draft portfolio

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -16,7 +16,16 @@
     <nav>
       <ul>
         <li>
-          <a href="#about me">About me</a>  
+          <a href="#about">About me</a>  
+        </li>
+        <li>
+          <a href="#work">Work</a>  
+        </li>
+        <li>
+          <a href="#contact">Contact</a>  
+        </li>
+        <li>
+          <a href="#cv">CV</a>  
         </li>
       </ul>
     </nav>
@@ -29,21 +38,38 @@
     </div>
   </section>
 
-  <main class="page-wrapper">
+  <main class="container">
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+    </section>
+    <section>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor vitae laboriosam veniam odio quia sequi reprehenderit rerum atque est consectetur, cumque officia ullam ea tenetur accusamus et aliquid sint.
     </section>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
     </section>
+    <section>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus maiores officia quisquam molestias, repudiandae doloribus minima eveniet soluta expedita, cupiditate, iure iusto error! Beatae ab nam molestiae. Delectus, est laudantium.
+    </section>
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
     </section>
+    <section>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
+    </section>
+
+        <!-- cv -->
+        <section class="page-section cv" id="cv">
+          <h2>CV</h2>
+        </section>
+        <section>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
+        </section>
   </main>
 </body>
 
