added a banner and readme file updated

--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
 
   <!-- hero banner -->
   <section class="hero-banner">
-    <div>
-      <h2>Welcome to my Portfolio</h2>
-    </div>
+      <img src="https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Welcome to my Portfolio"/>
+        <h2>Welcome to my Portfolio</h2>
   </section>
 
   <main class="container">
     <!-- about me -->
     <section class="page-section" id="about">
-      <h2>About Me</h2>
+      <h3>About Me</h3>
     </section>
     <section>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor vitae laboriosam veniam odio quia sequi reprehenderit rerum atque est consectetur, cumque officia ullam ea tenetur accusamus et aliquid sint.
@@ -49,7 +48,7 @@
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
+      <h3>Work</h3>
     </section>
     <section>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus maiores officia quisquam molestias, repudiandae doloribus minima eveniet soluta expedita, cupiditate, iure iusto error! Beatae ab nam molestiae. Delectus, est laudantium.
@@ -57,7 +56,7 @@
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+      <h3>Contact Me</h3>
     </section>
     <section>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
@@ -65,7 +64,7 @@
 
         <!-- cv -->
         <section class="page-section cv" id="cv">
-          <h2>CV</h2>
+          <h3>CV</h3>
         </section>
         <section>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
