p section has been adjusted

--- a/index.html
+++ b/index.html
@@ -43,31 +43,36 @@
       <h3>About Me</h3>
     </section>
     <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor vitae laboriosam veniam odio quia sequi reprehenderit rerum atque est consectetur, cumque officia ullam ea tenetur accusamus et aliquid sint.
-    </section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolor vitae laboriosam veniam odio quia sequi reprehenderit rerum atque est consectetur, cumque officia ullam ea tenetur accusamus et aliquid sint.
+    </p>
+      </section>
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h3>Work</h3>
     </section>
     <section>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus maiores officia quisquam molestias, repudiandae doloribus minima eveniet soluta expedita, cupiditate, iure iusto error! Beatae ab nam molestiae. Delectus, est laudantium.
-    </section>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus maiores officia quisquam molestias, repudiandae doloribus minima eveniet soluta expedita, cupiditate, iure iusto error! Beatae ab nam molestiae. Delectus, est laudantium.
+      </p>
+      </section>
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
       <h3>Contact Me</h3>
     </section>
     <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
-    </section>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
+      </p>
+          </section>
 
         <!-- cv -->
         <section class="page-section cv" id="cv">
           <h3>CV</h3>
         </section>
         <section>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur repellendus aperiam sed quia sint incidunt explicabo quis, distinctio deserunt commodi. Cupiditate, dolore cum. Suscipit sapiente quae commodi pariatur reprehenderit?
+          </p>g
         </section>
   </main>
 </body>
